[gd_scene load_steps=8 format=3 uid="uid://b33t81wdnlndr"]

[ext_resource type="Script" uid="uid://cdro1dmc4t3gy" path="res://scripts/Home.gd" id="1_p2yb4"]
[ext_resource type="Texture2D" uid="uid://bw8uq518dy65p" path="res://assets/backgrounds/inicio.png" id="2_72wqp"]
[ext_resource type="PackedScene" uid="uid://d2e8pvefg1rge" path="res://scenes/Player.tscn" id="2_yrnev"]
[ext_resource type="PackedScene" uid="uid://bcylxj15aelv3" path="res://scenes/UI/DialogBox.tscn" id="3_osgcs"]
[ext_resource type="Texture2D" uid="uid://c3dsopkdh6lkl" path="res://assets/ui/stick.png" id="3_yk4sq"]
[ext_resource type="Texture2D" uid="uid://btcynuwhnwxxq" path="res://assets/characters/spark_reborn_svg.svg" id="4_72wqp"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_oir2t"]

[node name="Home" type="Node2D"]
script = ExtResource("1_p2yb4")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_72wqp")
expand_mode = 1
stretch_mode = 6

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_oir2t")

[node name="LocationSigns" type="Node2D" parent="."]

[node name="TrainStationSign" type="Button" parent="LocationSigns" groups=["location_signs"]]
offset_left = 791.0
offset_top = 159.0
offset_right = 899.0
offset_bottom = 209.0
text = "Train Station"

[node name="CrosswordSign" type="Button" parent="LocationSigns" groups=["location_signs"]]
offset_left = 775.0
offset_top = 304.0
offset_right = 875.0
offset_bottom = 354.0
text = "Biblioteca"

[node name="MuseuSign" type="Button" parent="LocationSigns" groups=["location_signs"]]
offset_left = 165.0
offset_top = 500.0
offset_right = 286.0
offset_bottom = 557.0
text = "Museu"

[node name="Stick" type="Sprite2D" parent="."]
visible = false
position = Vector2(453, 485)
scale = Vector2(0.66129, 0.66129)
texture = ExtResource("3_yk4sq")

[node name="Player" parent="." instance=ExtResource("2_yrnev")]
position = Vector2(427, 169)
scale = Vector2(0.5, 0.5)

[node name="Spark" type="Sprite2D" parent="."]
position = Vector2(622, 90)
texture = ExtResource("4_72wqp")

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="DialogBox" parent="UI" instance=ExtResource("3_osgcs")]

[node name="TitleLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.5
offset_top = 20.0
offset_right = 172.5
offset_bottom = 61.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Spark's Tour Guide"
horizontal_alignment = 1
